--- a/index.html
+++ b/index.html
@@ -134,7 +134,28 @@
 <h2><span>Serviços e Especialidades</span></h2>
 
 <div class="services-container">
-    <div class="services-box"></div>
+    <div class="services-box">
+        <i class="bx bx-code-\alt"></i>
+    <h3> Web Development</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum officia atque amet dolorum error ut molestias delectus voluptate ex vitae quia, id reprehenderit tempore praesentium magni hic! Quos repellat porro, doloremque ea, corrupti ab sapiente sunt est excepturi eligendi numquam.</p>
+    
+    <a href="#" class="bnt">Read More</a>
+
+<div class="services-box">
+
+</div>
+
+
+<i class="bx bx-code-\alt"></i>
+    <h3> Back-End Development</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum officia atque amet dolorum error ut molestias delectus voluptate ex vitae quia, id reprehenderit tempore praesentium magni hic! Quos repellat porro, doloremque ea, corrupti ab sapiente sunt est excepturi eligendi numquam.</p>
+    <a href="#" class="bnt">Read More</a>
+
+    </div>
+
+
+
+
 </div>
 
 </section>
