--- a/index.html
+++ b/index.html
@@ -134,31 +134,49 @@
 <h2><span>Serviços e Especialidades</span></h2>
 
 <div class="services-container">
-    <div class="services-box">
-        <i class="bx bx-code-\alt"></i>
-    <h3> Web Development</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum officia atque amet dolorum error ut molestias delectus voluptate ex vitae quia, id reprehenderit tempore praesentium magni hic! Quos repellat porro, doloremque ea, corrupti ab sapiente sunt est excepturi eligendi numquam.</p>
-    
-    <a href="#" class="bnt">Read More</a>
+    <div class="services-box"></div>
+    <i class="bx bx-code-alt"></i>
 
-<div class="services-box">
-
-</div>
+    <h3>Web Development</h3>
 
 
-<i class="bx bx-code-\alt"></i>
-    <h3> Back-End Development</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum officia atque amet dolorum error ut molestias delectus voluptate ex vitae quia, id reprehenderit tempore praesentium magni hic! Quos repellat porro, doloremque ea, corrupti ab sapiente sunt est excepturi eligendi numquam.</p>
-    <a href="#" class="bnt">Read More</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime earum commodi cumque tempora perferendis at quidem iusto consequatur architecto ex est, totam quam ut tempore, asperiores, accusamus optio sunt voluptatibus corrupti nemo! Ut non perspiciatis dolore consectetur nihil quo in.</p>
 
-    </div>
+    <a href="#" class="btn">Read More</a>
+
+   <div class="services-box">
+
+    <i class="bx bx-code-curly"></i>
+
+    <h3>Back-End Development</h3>
 
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime earum commodi cumque tempora perferendis at quidem iusto consequatur architecto ex est, totam quam ut tempore, asperiores, accusamus optio sunt voluptatibus corrupti nemo! Ut non perspiciatis dolore consectetur nihil quo in.</p>
 
+    <a href="#" class="btn">Read More</a>
+
+   </div>
+   
+
+   <div class="services-box">
+
+    <i class="bx bx-mobile-alt"></i>
+
+    <h3>Mobile Development</h3>
+
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime earum commodi cumque tempora perferendis at quidem iusto consequatur architecto ex est, totam quam ut tempore, asperiores, accusamus optio sunt voluptatibus corrupti nemo! Ut non perspiciatis dolore consectetur nihil quo in.</p>
+
+    <a href="#" class="btn">Read More</a>
+
+   </div>
 
 </div>
 
 </section>
+
+<!-- FIM SERVICE -->
+
 
 
 </body>
