--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
             <i class="bx bxl-facebook"></i>
 
         </a>
-    <!-- BOTÃO INSTAGRAM -->
+        <!-- BOTÃO INSTAGRAM -->
         <a href="#">
             <i class="bx bxl-instagram"></i>
             
         </a>
 
-     <!-- BOTÃO WHATSAPP -->
+        <!-- BOTÃO WHATSAPP -->
 
         <a href="#">
             <i class="bx bxl-whatsapp"></i>
             
         </a>
 
-        <!-- BOTÃO LINKEDIN -->
+         <!-- BOTÃO LINKEDIN -->
 
         <a href="#">
             <i class="bx bxl-linkedin"></i>
@@ -124,10 +124,12 @@
 
 </section>
 
-<!-- FIM HOME SECTION -->
+                            <!-- FIM HOME SECTION -->
 
 
-<!-- INICIO SERVICE -->
+                            <!-- INICIO SERVICE -->
+
+
 
 <section class="services" id="services">
 
@@ -175,9 +177,28 @@
 
 </section>
 
-<!-- FIM SERVICE -->
+                                <!-- FIM SERVICE -->
 
 
+
+
+                            <!-- INICIO PORTFOLIO -->
+
+
+
+<section class="portfolio" id="portfolio">
+
+
+
+
+
+
+
+
+
+</section>
+
+                                <!-- FIM PORTFÓLIO -->
 
 </body>
 
