--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <title>Portfólio Matheus Fomm</title>
     <link rel="shortcut icon" href="#" type="image/x-icon">
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-    rel="stylesheet" href="./style.css">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <link rel="stylesheet" href="./style.css">
 
 
 </head>
