--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime earum commodi cumque tempora perferendis at quidem iusto consequatur architecto ex est, totam quam ut tempore, asperiores, accusamus optio sunt voluptatibus corrupti nemo! Ut non perspiciatis dolore consectetur nihil quo in.</p>
 
-    <a href="#" class="btn">Read More</a>
+    <a href="#" class="btn">Read More</a> </div>
 
    <div class="services-box">
 
@@ -169,9 +169,8 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime earum commodi cumque tempora perferendis at quidem iusto consequatur architecto ex est, totam quam ut tempore, asperiores, accusamus optio sunt voluptatibus corrupti nemo! Ut non perspiciatis dolore consectetur nihil quo in.</p>
 
-    <a href="#" class="btn">Read More</a>
-
-   </div>
+    <a href="#" class="btn">Read More</a> </div>
+    
 </div>
 </div>
 
