--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <div class="home-img">
 
-    <img src="#" alt="foto home">
+    <img src="./Assets/MatheusFoto.png" alt="foto home">
 
 </div>
 
@@ -195,7 +195,7 @@
 
 <div class="portfolio-box">
 
-<img src="./assets/MatheusFoto.png" alt="Portfolio 1">
+<img src="#" alt="Portfolio 1">
 
 <div class="portfolio-layer">
 
@@ -218,7 +218,7 @@
 
         <div class="portfolio-box">
 
-        <img src="./assets/MatheusFoto.png" alt="Portfolio 2">
+        <img src="./assets/imagem" alt="Portfolio 2">
             
         <div class="portfolio-layer">
             
