--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="home-content">
 
             <h3> Olá, meu nome é</h3>
-            <h1>Matheus Fomm</h1>
+            <h1>Matheus Fomm Garcia</h1>
             <h3> <span> Desenvolvedor de Sistemas </span></h3>
 
             <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária.Front-End Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico.</p>
@@ -285,8 +285,10 @@
         <p>Copyright &copy; 2025 by &lt;/Marcelocsn&gt;. All rights Reserved</p>
     </footer>                           
    
+
+ 
 </body>
 
-<script src="./JS/script.js"></script>
+<script src="./script.js"></script>
 
 </html>
