--- a/index.html
+++ b/index.html
@@ -48,13 +48,33 @@
 
             <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária.Front-End Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico.</p>
 
-            <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bx-envelope'></i></a>
-            </div>
+<div class="social-media">
+    <!-- Facebook -->
+    <a href="https://m.facebook.com/matheus.fomm/" target="_blank">
+        <i class='bx bxl-facebook'></i>
+    </a>
+
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/matheusfomm/" target="_blank">
+        <i class='bx bxl-instagram'></i>
+    </a>
+
+    <!-- WhatsApp -->
+    <a href="https://wa.me/5516988407801" target="_blank">
+        <i class='bx bxl-whatsapp'></i>
+    </a>
+
+    <!-- LinkedIn (com XXXXX para preencher depois) -->
+    <a href="https://www.linkedin.com/in/" target="_blank">
+        <i class='bx bxl-linkedin'></i>
+    </a>
+
+    <!-- Email -->
+    <a href="mailto:matheus.fomm.garcia1@gmail.com">
+        <i class='bx bx-envelope'></i>
+    </a>
+</div>
+
 
             <div>
                 <a href="#" class="btn">Download CV</a>
