--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <section class="about" id="about">
         <div class="about-img">
 
-         <img src="./Assets/fotoperfilnovogithub.png" alt="About me">   
+         <img src="./Assets/FotoCurriculo.png" alt="About me">   
 
         </div>
 
