--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <a href="#" class="logo">Portfolio</a>
 
     <div class="nav">
-        <a href="#home">Home</a>
-        <a href="#services">Services</a>
+        <a href="#home">Início</a>
+        <a href="#services">Serviços</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="#contact">Contato</a>
+        <a href="#about">Sobre Mim</a>
     </div>
 
 <!-- header que aparecerá em telas menores -->
@@ -46,7 +46,7 @@
             <h1>Matheus Fomm Garcia</h1>
             <h3> <span> Desenvolvedor de Sistemas </span></h3>
 
-            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária.Front-End Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico.</p>
+            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico.</p>
 
 <div class="social-media">
     <!-- Facebook -->
@@ -92,7 +92,7 @@
 
     <section class="services" id="services">
 
-        <h2> Our <span>Services</span></h2>
+        <h2> Meus <span>Serviços</span></h2>
 
         <div class="services-container">
 
@@ -103,10 +103,10 @@
                 <h3>Web Development</h3>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus aut esse totam, ipsa corporis ipsam blanditiis reiciendis voluptatibus, ratione temporibus nesciunt fugit dolores. Accusamus quisquam quod voluptate expedita nobis?
+                   Desenvolvedor Web, em Front-End (HTML, CSS e JavaScript)
                 </p>
 
-                <a href="#" class="btn">Read more</a>
+                <a href="#" class="btn">Veja Mais</a>
 
             </div>
 
@@ -117,10 +117,10 @@
                 <h3>Back-End Development</h3>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus aut esse totam, ipsa corporis ipsam blanditiis reiciendis voluptatibus, ratione temporibus nesciunt fugit dolores. Accusamus quisquam quod voluptate expedita nobis?
+                    Experiente com Back-End
                 </p>
 
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Veja Mais</a>
 
             </div>
     
@@ -131,10 +131,10 @@
                 <h3>Mobile</h3>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus aut esse totam, ipsa corporis ipsam blanditiis reiciendis voluptatibus, ratione temporibus nesciunt fugit dolores. Accusamus quisquam quod voluptate expedita nobis?
+                    Desenvolvedor Mobile. Experiencia em MySQL
                 </p>
 
-                <a href="#" class="btn">Read more</a>
+                <a href="#" class="btn">Veja Mais</a>
 
             </div>
 
@@ -149,7 +149,7 @@
 
       <section class="portfolio" id="portfolio">
 
-        <h2>Latest <span>Projects</span></h2>
+        <h2>Meus Ultímos <span>Projetos</span></h2>
 
         <div class="portfolio-container">
 
@@ -262,18 +262,18 @@
         <form action="">
 
                 <div class="input-box">
-                    <input type="text" placeholder="Full Name">
+                    <input type="text" placeholder="Nome Completo">
                     <input type="email" placeholder="E-mail">
                 </div>
 
                 <div class="input-box">
-                    <input type="tel" placeholder="Phone Number">
-                    <input type="text" placeholder="Subject">
+                    <input type="tel" placeholder="Número de Telefone">
+                    <input type="text" placeholder="Assunto">
                 </div>
 
-                <textarea cols="30" rows="8" placeholder="Message"></textarea>
+                <textarea cols="30" rows="8" placeholder="Mensagem"></textarea>
 
-                <a href="#" class="btn">Send Message</a>
+                <a href="#" class="btn">Enviar Mensagem</a>
 
         </form>
       </section>
@@ -289,20 +289,20 @@
         </div>
 
         <div class="about-content">
-            <h3>About Me</h3>
-            <h1>Full-stack <span>Developer</span> and <span>Teacher</span></h1>
+            <h3>Sobre Mim</h3>
+            <h1>Desenvolvedor <span>Front-End</span> e <span> Back-End</span></h1>
 
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, reiciendis quia, eos ratione tempora voluptatum ab iste, veritatis praesentium fugiat corporis facilis omnis! Voluptatibus id facilis odit sunt molestiae, hic, mollitia laborum error enim rerum architecto totam fugit consequatur aut suscipit quae explicabo laudantium. Doloribus tenetur maxime veritatis illo unde exercitationem asperiores aliquam rem incidunt voluptatibus. Autem eligendi aperiam accusamus.
+                Começando na área da tecnologia digital. Pequena experiência0nnnnnnnnnnnnnnnbbbbbbbbbbbbbbbbbbbbbbbbbbbbx´p  em HTML, CSS e JavaScript. Estou em busca de uma primeira experiência no mercado de trabalho digital, em busca de mais reconhecimento e estudo na área.
             </p>
 
-            <a href="#" class="btn">Read More</a>
+            <a href="#" class="btn">Leia Mais</a>
         </div>
       </section>
                              <!-- /about section  -->
 
     <footer>
-        <p>Copyright &copy; 2025 by &lt;/Marcelocsn&gt;. All rights Reserved</p>
+        <p>Copyright &copy; 2025 by &lt;/Matheus Fomm Garcia&gt;. All rights Reserved</p>
     </footer>                           
    
 
