--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h3>Back-End Development</h3>
 
                 <p>
-                    Experiente com Back-End
+                    Experiência com Back-End
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -131,7 +131,7 @@
                 <h3>Mobile</h3>
 
                 <p>
-                    Desenvolvedor Mobile. Experiencia em MySQL
+                    Desenvolvedor Mobile. Experiência em MySQL
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -293,7 +293,7 @@
             <h1>Desenvolvedor <span>Front-End</span> e <span> Back-End</span></h1>
 
             <p>
-                Começando na área da tecnologia digital. Pequena experiência0nnnnnnnnnnnnnnnbbbbbbbbbbbbbbbbbbbbbbbbbbbbx´p  em HTML, CSS e JavaScript. Estou em busca de uma primeira experiência no mercado de trabalho digital, em busca de mais reconhecimento e estudo na área.
+                Começando na área da tecnologia digital. Pequena experiência em HTML, CSS e JavaScript. Estou em busca de uma primeira experiência e oportunidade no mercado de trabalho digital, estou em busca de mais reconhecimento e estudo na área.
             </p>
 
             <a href="#" class="btn">Leia Mais</a>
