--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <div class="bar3"></div>
     </div>
 
+
+
     </header> 
 
     <!-- home section -->
@@ -46,7 +48,8 @@
             <h1>Matheus Fomm Garcia</h1>
             <h3> <span> Desenvolvedor de Sistemas </span></h3>
 
-            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico.</p>
+            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico. Abaixo estão maneiras de me contactar e meus
+                 últimos projetos.</p>
 
 <div class="social-media">
     <!-- Facebook -->
@@ -103,7 +106,7 @@
                 <h3>Web Development</h3>
 
                 <p>
-                   Desenvolvedor Web, em Front-End (HTML, CSS e JavaScript)
+                   Desenvolvedor Web, em Front-End (HTML, CSS e JavaScript).
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -117,7 +120,7 @@
                 <h3>Back-End Development</h3>
 
                 <p>
-                    Experiência com Back-End
+                    JR em Back-End, em busca de aprender e aprimorar meus conhecimentos na área.
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -131,7 +134,7 @@
                 <h3>Mobile</h3>
 
                 <p>
-                    Desenvolvedor Mobile. Experiência em MySQL
+                    Desenvolvedor Mobile. Atualmente ainda em aprendizado em MySQL
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -149,7 +152,7 @@
 
       <section class="portfolio" id="portfolio">
 
-        <h2>Meus Ultímos <span>Projetos</span></h2>
+        <h2> Meus Ultímos <span> Projetos </span></h2>
 
         <div class="portfolio-container">
 
@@ -306,7 +309,6 @@
     </footer>                           
    
 
- 
 </body>
 
 <script src="./script.js"></script>
