--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             <h1>Matheus Fomm Garcia</h1>
             <h3> <span> Desenvolvedor de Sistemas </span></h3>
 
-            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico. Abaixo estão maneiras de me contactar e meus
-                 últimos projetos.</p>
+            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico. Abaixo estão maneiras de me contactar e meus últimos projetos feitos.</p>
 
 <div class="social-media">
     <!-- Facebook -->
@@ -87,7 +86,7 @@
         <div class="home-img">
             <img src="./Assets/FotoCurriculo.png" alt="foto home">
         </div>
-
+y
     </section>
     <!-- /home section -->
 
@@ -103,10 +102,10 @@
 
                 <i class='bx bx-code-alt'></i>
 
-                <h3>Web Development</h3>
+                <h3>Front-End</h3>
 
                 <p>
-                   Desenvolvedor Web, em Front-End (HTML, CSS e JavaScript).
+                   Desenvolvedor Web em Front-End (HTML, CSS e JavaScript).
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -131,7 +130,7 @@
 
                 <i class='bx bx-mobile-alt'></i>
 
-                <h3>Mobile</h3>
+                <h3>Mobile Development</h3>
 
                 <p>
                     Desenvolvedor Mobile. Atualmente ainda em aprendizado em MySQL
@@ -195,7 +194,7 @@
                     <h4>Web Development</h4>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum.
                     </p>
 
                     <a href="#"><i class='bx bx-link-external'></i></a>
@@ -296,7 +295,7 @@
             <h1>Desenvolvedor <span>Front-End</span> e <span> Back-End</span></h1>
 
             <p>
-                Começando na área da tecnologia digital. Pequena experiência em HTML, CSS e JavaScript. Estou em busca de uma primeira experiência e oportunidade no mercado de trabalho digital, estou em busca de mais reconhecimento e estudo na área.
+                Começando na área da tecnologia digital. Pequena experiência em HTML, CSS e JavaScript. Estou em busca de uma primeira experiência e oportunidade no mercado de trabalho digital, estou em busca de mais reconhecimento e estudo na área. 
             </p>
 
             <a href="#" class="btn">Leia Mais</a>
