--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
     </a>
 </div>
 
-
             <div>
                 <a href="#" class="btn">Download CV</a>
             </div>            
@@ -86,7 +85,7 @@
         <div class="home-img">
             <img src="./Assets/FotoCurriculo.png" alt="foto home">
         </div>
-y
+
     </section>
     <!-- /home section -->
 
@@ -105,7 +104,7 @@ y
                 <h3>Front-End</h3>
 
                 <p>
-                   Desenvolvedor Web em Front-End (HTML, CSS e JavaScript).
+                   Desenvolvedor JR em Front-End (HTML, CSS e JavaScript), sempre buscando aprimorar meus conhecimentos.
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -119,7 +118,7 @@ y
                 <h3>Back-End Development</h3>
 
                 <p>
-                    JR em Back-End, em busca de aprender e aprimorar meus conhecimentos na área.
+                    Desenvolvedor JR em Back-End, em busca de aprender e aprimorar meus conhecimentos na área.
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -133,7 +132,7 @@ y
                 <h3>Mobile Development</h3>
 
                 <p>
-                    Desenvolvedor Mobile. Atualmente ainda em aprendizado em MySQL
+                    Desenvolvedor JR Mobile. Em aprendizado em MySQL
                 </p>
 
                 <a href="#" class="btn">Veja Mais</a>
@@ -210,7 +209,8 @@ y
                     <h4>Web Development</h4>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error 
+                        et velit doloribus cum. 
                     </p>
 
                     <a href="#"><i class='bx bx-link-external'></i></a>
@@ -286,7 +286,7 @@ y
       <section class="about" id="about">
         <div class="about-img">
 
-         <img src="./Assets/FotoCurriculo.png" alt="About me">   
+         <img src="./Assets/FotoCurriculo2.png" alt="About me">   
 
         </div>
 
