--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,37 +9,38 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-   <header>
-    <a href="#" class="logo">Portfolio</a>
+    <header>
+        <a href="#" class="logo">Portfolio</a>
 
-    <div class="nav">
-        <a href="#home">Início</a>
-        <a href="#services">Serviços</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contato</a>
-        <a href="#about">Sobre Mim</a>
-    </div>
+        <div class="nav">
+            <a href="#home">Início</a>
+            <a href="#services">Serviços</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contato</a>
+            <a href="#about">Sobre Mim</a>
+        </div>
 
-<!-- header que aparecerá em telas menores -->
+        <!-- header que aparecerá em telas menores -->
 
-    <div class="nav-responsive">
-        <a href="#home">Home</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-    </div>
+        <div class="nav-responsive">
+            <a href="#home">Home</a>
+            <a href="#services">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
 
-    <div class="menu-hamburguer">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-    </div>
+        <div class="menu-hamburguer">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
 
 
 
-    </header> 
+    </header>
 
     <!-- home section -->
     <section class="home" id="home">
@@ -48,48 +50,51 @@
             <h1>Matheus Fomm Garcia</h1>
             <h3> <span> Desenvolvedor de Sistemas </span></h3>
 
-            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas, Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a procura da minha primeira experiência no mercado de trabalho tecnológico. Abaixo estão maneiras de me contactar e meus últimos projetos feitos.</p>
+            <p>Olá, meu nome é Matheus Fomm Garcia, tenho 17 anos. Estou cursando Desenvolvimento de Sistemas,
+                Informática Básica e Intermediária, Front-End, Back-End, Banco de Dados e Programação Mobile. Estou a
+                procura da minha primeira experiência no mercado de trabalho tecnológico. Abaixo estão maneiras de me
+                contactar e meus últimos projetos feitos.</p>
 
-<div class="social-media">
-    <!-- Facebook -->
-    <a href="https://m.facebook.com/matheus.fomm/" target="_blank">
-        <i class='bx bxl-facebook'></i>
-    </a>
+            <div class="social-media">
+                <!-- Facebook -->
+                <a href="https://m.facebook.com/matheus.fomm/" target="_blank">
+                    <i class='bx bxl-facebook'></i>
+                </a>
 
-    <!-- Instagram -->
-    <a href="https://www.instagram.com/matheusfomm/" target="_blank">
-        <i class='bx bxl-instagram'></i>
-    </a>
+                <!-- Instagram -->
+                <a href="https://www.instagram.com/matheusfomm/" target="_blank">
+                    <i class='bx bxl-instagram'></i>
+                </a>
 
-    <!-- WhatsApp -->
-    <a href="https://wa.me/5516988407801" target="_blank">
-        <i class='bx bxl-whatsapp'></i>
-    </a>
+                <!-- WhatsApp -->
+                <a href="https://wa.me/5516988407801" target="_blank">
+                    <i class='bx bxl-whatsapp'></i>
+                </a>
 
-    <!-- LinkedIn (com XXXXX para preencher depois) -->
-    <a href="https://www.linkedin.com/in/" target="_blank">
-        <i class='bx bxl-linkedin'></i>
-    </a>
+                <!-- LinkedIn (com XXXXX para preencher depois) -->
+                <a href="https://www.linkedin.com/in/" target="_blank">
+                    <i class='bx bxl-linkedin'></i>
+                </a>
 
-    <!-- Email -->
-    <a href="mailto:matheus.fomm.garcia1@gmail.com">
-        <i class='bx bx-envelope'></i>
-    </a>
-</div>
+                <!-- Email -->
+                <a href="mailto:matheus.fomm.garcia1@gmail.com">
+                    <i class='bx bx-envelope'></i>
+                </a>
+            </div>
 
             <div>
                 <a href="#" class="btn">Download CV</a>
-            </div>            
+            </div>
         </div>
 
         <div class="home-img">
-            <img src="./Assets/FotoCurriculo.png" alt="foto home">
+            <img src="./Assets/FotoCurriculo1.png" alt="foto home">
         </div>
 
     </section>
     <!-- /home section -->
 
-     <!-- service -->
+    <!-- service -->
 
     <section class="services" id="services">
 
@@ -101,30 +106,30 @@
 
                 <i class='bx bx-code-alt'></i>
 
-                <h3>Front-End</h3>
+                <h3>Front-End Development</h3>
 
                 <p>
-                   Desenvolvedor JR em Front-End (HTML, CSS e JavaScript), sempre buscando aprimorar meus conhecimentos.
+                    Desenvolvedor Front-End (HTML, CSS e JavaScript), sempre buscando aprimorar meus conhecimentos.
                 </p>
 
-                <a href="#" class="btn">Veja Mais</a>
+                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Conato</a>
 
             </div>
 
             <div class="services-box">
 
-                <i class='bx bx-code-curly' ></i>
+                <i class='bx bx-code-curly'></i>
 
                 <h3>Back-End Development</h3>
 
                 <p>
-                    Desenvolvedor JR em Back-End, em busca de aprender e aprimorar meus conhecimentos na área.
+                    Desenvolvedor Back-End, em busca de aprender e aprimorar meus conhecimentos na área.
                 </p>
 
-                <a href="#" class="btn">Veja Mais</a>
+                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Conato</a>
 
             </div>
-    
+
             <div class="services-box">
 
                 <i class='bx bx-mobile-alt'></i>
@@ -132,10 +137,10 @@
                 <h3>Mobile Development</h3>
 
                 <p>
-                    Desenvolvedor JR Mobile. Em aprendizado em MySQL
+                    Desenvolvedor Mobile. Em aprendizado em MySQL
                 </p>
 
-                <a href="#" class="btn">Veja Mais</a>
+                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Conato</a>
 
             </div>
 
@@ -144,25 +149,92 @@
 
     </section>
 
-      <!-- /service -->
+    <!-- /service -->
 
-      <!-- Portfolio section -->
+    <!-- Portfolio section -->
 
-      <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="portfolio">
 
-        <h2> Meus Ultímos <span> Projetos </span></h2>
+        <h2> Meus Ultímos <span> Projetos (Até o momento) </span></h2>
 
         <div class="portfolio-container">
 
             <div class="portfolio-box">
 
-                <img src="./Assets/imagem1.jpg" alt="portfolio 1">
+                <img src="./assets/cardapio.png" alt="portfolio 1">
+
+                <div class="portfolio-layer">
+                    <h4>Cardápio Fictício</h4>
+
+                    <p>
+                        Site de cardápio, feito em 13 de agosto de 2025, durante meu tereiro ano do ensino médio
+                    </p>
+
+                    <a href="https://matheusfommgarcia.github.io/Cardapio/"><i class='bx bx-link-external'></i></a>
+
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+
+                <img src="./assets/correioelegante.png" alt="portfolio 2">
+
+                <div class="portfolio-layer">
+                    <h4>Correio Elegante Escolar</h4>
+
+                    <p>
+                    Site simples feito para um evento escolar da semana dia dos namorados, feito entre 06 à 14 de junho de 2025
+                    </p>
+
+                    <a href="https://matheusfommgarcia.github.io/CorreioEleganteDigital/"><i class='bx bx-link-external'></i></a>
+
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="./assets/siteescola.png" alt="portfolio 3">
+
+                <div class="portfolio-layer">
+                    <h4>Site da escola Alberto Santos Dumont</h4>
+
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi
+                        quisquam quibusdam error et velit doloribus cum.
+                    </p>
+
+                    <a href=" https://matheusfommgarcia.github.io/Escola-Alberto-Santos-Dumont/"><i class='bx bx-link-external'></i></a>
+
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+
+                <img src=".aAssets/imagem4.jpg" alt="portfolio 4">
 
                 <div class="portfolio-layer">
                     <h4>Web Development</h4>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi
+                        quisquam quibusdam error
+                        et velit doloribus cum.
+                    </p>
+
+                    <a href="https://matheusfommgarcia.github.io/SurpresaS2/"><i class='bx bx-link-external'></i></a>
+
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+
+                <img src="./assets/imagem5.jpg" alt="portfolio 5">
+
+                <div class="portfolio-layer">
+                    <h4>Web Development</h4>
+
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi
+                        quisquam quibusdam error et velit doloribus cum.
                     </p>
 
                     <a href="#"><i class='bx bx-link-external'></i></a>
@@ -172,77 +244,14 @@
 
             <div class="portfolio-box">
 
-                <img src="./Assets/imagem2.jpg" alt="portfolio 2">
+                <img src="./assets/imagem6.jpg" alt="portfolio 6">
 
                 <div class="portfolio-layer">
                     <h4>Web Development</h4>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum. 
-                    </p>
-
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./Assets/imagem3.jpg" alt="portfolio 3">
-
-                <div class="portfolio-layer">
-                    <h4>Web Development</h4>
-
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum.
-                    </p>
-
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-
-                <img src="./Assets/imagem4.jpg" alt="portfolio 4">
-
-                <div class="portfolio-layer">
-                    <h4>Web Development</h4>
-
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error 
-                        et velit doloribus cum. 
-                    </p>
-
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-
-                <img src="./Assets/imagem5.jpg" alt="portfolio 5">
-
-                <div class="portfolio-layer">
-                    <h4>Web Development</h4>
-
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum. 
-                    </p>
-
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-
-              <img src="./Assets/imagem6.jpg" alt="portfolio 6">
-
-                <div class="portfolio-layer">
-                    <h4>Web Development</h4>
-
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi quisquam quibusdam error et velit doloribus cum. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi
+                        quisquam quibusdam error et velit doloribus cum.
                     </p>
 
                     <a href="#"><i class='bx bx-link-external'></i></a>
@@ -251,42 +260,42 @@
             </div>
         </div>
 
-      </section>
-      
-       <!-- /Portfolio section -->
+    </section>
 
-       <!-- Contact -->
+    <!-- /Portfolio section -->
 
-      <section class="contact" id="contact">
+    <!-- Contact -->
+
+    <section class="contact" id="contact">
 
         <h2>Contact <span>Me!</span></h2>
 
         <form action="">
 
-                <div class="input-box">
-                    <input type="text" placeholder="Nome Completo">
-                    <input type="email" placeholder="E-mail">
-                </div>
+            <div class="input-box">
+                <input type="text" placeholder="Nome Completo">
+                <input type="email" placeholder="E-mail">
+            </div>
 
-                <div class="input-box">
-                    <input type="tel" placeholder="Número de Telefone">
-                    <input type="text" placeholder="Assunto">
-                </div>
+            <div class="input-box">
+                <input type="tel" placeholder="Número de Telefone">
+                <input type="text" placeholder="Assunto">
+            </div>
 
-                <textarea cols="30" rows="8" placeholder="Mensagem"></textarea>
+            <textarea cols="30" rows="8" placeholder="Mensagem"></textarea>
 
-                <a href="#" class="btn">Enviar Mensagem</a>
+            <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Enviar Mensagem</a>
 
         </form>
-      </section>
-                             <!-- /Contact -->
+    </section>
+    <!-- /Contact -->
 
-                             <!-- about section  -->
+    <!-- about section  -->
 
-      <section class="about" id="about">
+    <section class="about" id="about">
         <div class="about-img">
 
-         <img src="./Assets/FotoCurriculo2.png" alt="About me">   
+            <img src="./assets/FotoCurriculo1.png" alt="About me">
 
         </div>
 
@@ -295,18 +304,20 @@
             <h1>Desenvolvedor <span>Front-End</span> e <span> Back-End</span></h1>
 
             <p>
-                Começando na área da tecnologia digital. Pequena experiência em HTML, CSS e JavaScript. Estou em busca de uma primeira experiência e oportunidade no mercado de trabalho digital, estou em busca de mais reconhecimento e estudo na área. 
+                Começando na área da tecnologia digital. Pequena experiência em HTML, CSS e JavaScript. Estou em busca
+                de uma primeira experiência e oportunidade no mercado de trabalho digital, estou em busca de mais
+                reconhecimento e estudo na área.
             </p>
 
-            <a href="#" class="btn">Leia Mais</a>
+            <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Contato</a>
         </div>
-      </section>
-                             <!-- /about section  -->
+    </section>
+    <!-- /about section  -->
 
     <footer>
         <p>Copyright &copy; 2025 by &lt;/Matheus Fomm Garcia&gt;. All rights Reserved</p>
-    </footer>                           
-   
+    </footer>
+
 
 </body>
 
