--- a/index.html
+++ b/index.html
@@ -195,11 +195,10 @@
                 <img src="./assets/siteescola.png" alt="portfolio 3">
 
                 <div class="portfolio-layer">
-                    <h4>Site da escola Alberto Santos Dumont</h4>
+                    <h4>Site Escola </h4>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita excepturi tempore modi
-                        quisquam quibusdam error et velit doloribus cum.
+                        Site da escola que estudo atualmente, ainda está em desenvolvimento, fiquei responsável pela sessão "Fundadores (Ou "Direção", ainda não foi decidido o nome)
                     </p>
 
                     <a href=" https://matheusfommgarcia.github.io/Escola-Alberto-Santos-Dumont/"><i class='bx bx-link-external'></i></a>
@@ -295,7 +294,7 @@
     <section class="about" id="about">
         <div class="about-img">
 
-            <img src="./assets/FotoCurriculo1.png" alt="About me">
+            <img src="./Assets/FotoCurriculo1.png" alt="About me">
 
         </div>
 
