--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="home-img">
-            <img src="./Assets/FotoCurriculo1.png" alt="foto home">
+            <img src="./assets/FotoCurriculo1.png" alt="foto home">
         </div>
 
     </section>
@@ -208,7 +208,7 @@
 
             <div class="portfolio-box">
 
-                <img src=".aAssets/imagem4.jpg" alt="portfolio 4">
+                <img src=".assets/imagem4.jpg" alt="portfolio 4">
 
                 <div class="portfolio-layer">
                     <h4>Web Development</h4>
@@ -294,7 +294,7 @@
     <section class="about" id="about">
         <div class="about-img">
 
-            <img src="./Assets/FotoCurriculo1.png" alt="About me">
+            <img src="./assets/FotoCurriculo1.png" alt="About me">
 
         </div>
 
