--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="home-img">
-            <img src="./assets/FotoCurriculo1.png" alt="foto home">
+            <img src="./assets/Foto1.png" alt="foto home">
         </div>
 
     </section>
@@ -294,7 +294,7 @@
     <section class="about" id="about">
         <div class="about-img">
 
-            <img src="./assets/FotoCurriculo1.png" alt="About me">
+            <img src="./assets/Foto1.png" alt="About me">
 
         </div>
 
