--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="home-img">
-            <img src="./assets/foto.png" alt="foto home">
+            <img src="./assets/Foto1.png" alt="foto home">
         </div>
 
     </section>
@@ -112,7 +112,7 @@
                     Desenvolvedor Front-End (HTML, CSS e JavaScript), sempre buscando aprimorar meus conhecimentos.
                 </p>
 
-                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Contato</a>
+                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Conato</a>
 
             </div>
 
@@ -126,7 +126,7 @@
                     Desenvolvedor Back-End, em busca de aprender e aprimorar meus conhecimentos na área.
                 </p>
 
-                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Contato</a>
+                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Conato</a>
 
             </div>
 
@@ -140,7 +140,7 @@
                     Desenvolvedor Mobile. Em aprendizado em MySQL
                 </p>
 
-                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Contato</a>
+                <a href="mailto:matheus.fomm.garcia1@gmail.com" class="btn">Entre em Conato</a>
 
             </div>
 
@@ -294,7 +294,7 @@
     <section class="about" id="about">
         <div class="about-img">
 
-            <img src="./assets/foto.png" alt="About me">
+            <img src="./assets/Foto1.png" alt="About me">
 
         </div>
 
